Add /profile/temperature
